
    No threads matched.

  without printing the provided arguments.  The newly added '-stopped'
  option makes GDB list the stopped threads only.  Similarly,
  '-running' makes GDB list the running threads only.  If both options
  are given together, both stopped and running threads are listed.
  These new flags can be useful to get a reduced list when there is a
  large number of threads.

* GDB-internal Thread Local Storage (TLS) support

  ** Linux targets for the x86_64, aarch64, ppc64, s390x, and riscv
     architectures now have GDB-internal support for TLS address
     lookup in addition to that traditionally provided by the
     libthread_db library.  This internal support works for programs
     linked against either the GLIBC or MUSL C libraries.  For
     programs linked against MUSL, this new internal support provides
     new debug functionality, allowing access to TLS variables, due to
     the fact that MUSL does not implement the libthread_db library.
     Internal TLS support is also useful in cross-debugging
     situations, debugging statically linked binaries, and debugging
     programs linked against GLIBC 2.33 and earlier, but which are not
     linked against libpthread.

  ** The command 'maint set force-internal-tls-address-lookup on' may
     be used to force the internal TLS lookup mechanisms to be used.
     Otherwise, TLS lookup via libthread_db will still be preferred,
     when available.

* Python API

  ** GDB no longer supports Python versions less than 3.4.

  ** New class gdb.Color for dealing with colors.

  ** New constant gdb.PARAM_COLOR represents color type of a
     gdb.Parameter.value.  Parameter's value is gdb.Color instance.

  ** The memory_source argument (the second argument) has been removed
     from gdb.disassembler.builtin_disassemble.  This argument was
     never used by GDB, and was added by mistake.  The unused argument
     was never documented in the GDB manual, so users should not have
     been using it.